--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "recharts": "^2.15.0",
     "structured-clone": "^0.2.2"
   },
   "devDependencies": {
